back to lower case name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <aside class="sidebar">
            <div class="my-info">
                <img src="images/tw.png" alt="Talaboulma Walid" class="portfolio-image">
-               <h1>TALABOULMA Walid</h1>
+               <h1>Talaboulma Walid</h1>
                <h2>Ingénieur en Electronique<br>Systèmes Embarqués</h2>
                <div class="social group">
                    <a href="#" class="linkedin">LinkedIn</a>
