--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <meta name="description" content="Site personnel on profil en ligneUn ensemble d'articles regroupant mes travaux ">
+    <meta name="description" content="Site personnel ou profil en ligne Un ensemble d'articles regroupant mes travaux ">
     <meta name="keywords" content="Ingénieur Electronique systèmes embarqués embeded systems computer science electrical engineering 
     vhdl verilog fpga soc chip ARM cortex intel processor processeur asm operating systems OS article articles programmation informatique programming  C C++ C/C++ linux device driver real time temps réel CV curriculum vitae Resume Talaboulma Walid ">
     <meta name="robots" content="All">
